# rust-geo-booleanop

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/boolean/: compare_segments.rs  compute_fields.rs  connect_edges.rs  divide_segment.rs  fill_queue.rs  helper.rs  mod.rs  possible_intersection.rs  segment_intersection.rs  signed_area.rs  subdivide_segments.rs  sweep_event.rs
lib/src/splay/: mod.rs  node.rs  tree.rs
src/: lib.rs
src/boolean/: compare_segments.rs  connect_edges.rs  divide_segment.rs  edge_cases_test.rs  feature_type_test.rs  fill_queue.rs  helper.rs  mod.rs  possible_intersection.rs  segment_intersection.rs  signed_area.rs  subdivide_segments.rs  sweep_event.rs
src/splay/: mod.rs  node.rs  set.rs
tests/: Cargo.toml  README.md
tests/benches/: benchmark.rs
tests/fixtures/: issue17-panic.geojson
tests/fixtures/generic_test_cases/: basic2_poly_with_hole.geojson  basic4_multi_poly_with_hole.geojson  checkerboard1.geojson  daef_foo_tri2.geojson  daef_holed_tri2.geojson  daef_swapped_twointersecting_empty.geojson  daef_twointersectingcontours_empty.geojson  fatal2.geojson  fatal3.geojson  fatal4.geojson  hourglasses.geojson  issue103.geojson  issue68.geojson  issue69.geojson  issue76.geojson  issue93.geojson  many_vertical1.geojson  overlapping_segments2.geojson  overlapping_segments4.geojson  self_overlaps1.geojson
tests/scripts/: plot_changed_test_cases.sh  plot_test_cases.py
tests/src/: compact_geojson.rs  data_generators.rs  edge_cases_test.rs  feature_type_test.rs  fill_queue_test.rs  generic_test_cases.rs  helper.rs  lib.rs  possible_intersection_test.rs  subdivide_segments_test.rs
