[package]
name = "geo-booleanop"
version = "0.3.1"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/21re/rust-geo-booleanop"
description = "Rust implementation of the Martinez-Rueda Polygon Clipping Algorithm"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]

[dependencies]
geo-types = { version = "0.5.0", default-features = false }
num-traits = "0.2"
robust = "0.1"
float_next_after = "0.1"

[dev-dependencies]
rand = "0.3"

[features]
debug-booleanop = []
