[package]
name = "geo-booleanop-tests"
version = "0.2.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"

[dependencies]
geo-booleanop = { path = "../lib" }
geo = "0.12"

# Note: It is crucial to enable arbitrary_precision on serde_json, otherwise
# JSON parsing isn't exact.
geojson = { version = "0.16", features = ["geo-types"] }
serde_json = { version = "1.0.44", features = ["arbitrary_precision"] }

num-traits = "0.2"
glob = "0.3"
pretty_assertions = "0.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
