[package]
name = "geo-booleanop-tests"
version = "0.3.1"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"

[dependencies]
geo-booleanop = { path = "../lib", features = [] }   # add "debug-booleanop" for debugging
geo = "0.13"

# Note: It is crucial to enable arbitrary_precision on serde_json, otherwise
# JSON parsing isn't exact.
geojson = { version = "0.18", features = ["geo-types"] }
serde_json = { version = "1.0.44", features = ["arbitrary_precision"] }

clap = "2.3.3"
num-traits = "0.2"
glob = "0.3"
pretty_assertions = "0.6"
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
